<resources>
    <string name="app_name">Cookey</string>
    <string name="title_home">Home</string>
    <string name="title_MyRecipes">My Recipes</string>
    <string name="title_MyIngredients">My Ingredients</string>
    <string name="title_AI">A.I.</string>
    <string name="title_MyShoppingList">My Shopping List</string>
    <string name="title_Settings">Settings</string>
    <string name="title_Search">Search</string>
    <string name="ai_prompt">What would you like to cook today?</string>
    <string name="chef_hat_logo">Chef Hat logo</string>
    <string name="ai_recipe">AI recipe</string>
    <string name="cook">Cook</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="set_ingredient_quantity_to_0">Set ingredient quantity to 0</string>
    <string name="edit">Edit</string>
    <string name="view_all_ingredients">View all ingredients</string>
    <string name="ingredient_recycle_view">Ingredient recycle view</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="food">Food</string>
    <string name="non_food">Non-Food</string>
    <string name="all">All</string>
    <string name="shortened_title_my_shopping_list">Shopping List</string>
    <string name="shortened_title_my_ingredients">Ingredients</string>
    <string name="shortened_title_my_recipes">Recipes</string>
    <string name="no_expiration_dates">No expiration dates</string>
    <string name="error_displaying_dates">Error displaying dates</string>


    <string name="AIRecipeButton">Ai Recipe Button</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="favorite">Favourite</string>
    <string name="title_add_recipe">Recipe Management</string>
    <string name="title_search_recipe">Search Recipes</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="search_hint">Search recipes…</string>
    <string name="search">Search</string>
    <string name="filter_prompt">Select filter</string>
    <string name="apply_filters">Apply</string>
    <string name="filter_favorites">Favorites only</string>
    <string name="filter_difficulty_easy">Easy</string>
    <string name="filter_difficulty_medium">Medium</string>
    <string name="filter_difficulty_hard">Hard</string>
    <string name="recipe_image_desc">Recipe Picture</string>
    <string name="recipe_title_desc">Recipe Title</string>
    <string name="search_results_desc">Result List</string>
    <string name="search_recipe_button">Search Button</string>
    <string name="add_recipe_button">Add Recipe Button</string>
    <string name="recipe_title_example">Recipe Title</string>
    <string name="recipe_text_example">30 mins | Easy</string>
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="ingredients_title_add">Ingredients</string>
    <string name="add_title_btn_add">Add +</string>
    <string name="steps_title_add">Steps</string>
    <string name="tags_title_add">Tags</string>
    <string name="country_title_add">Country</string>
    <string name="time_title_add">Time</string>
    <string name="servings_title_hint_add">Servings (e.g., 4)</string>
    <string name="difficulty_title_add">Difficulty</string>
    <string name="confirm_title_add">Confirm</string>
    <string name="img_picker_launcher_content_dec_add">img_picker_launcher</string>
    <string name="backbtndescription">backBtnDescription</string>
    <string name="consumeBtnDescription">consumeBtnDescription</string>
    <string name="favBtnDescription">Favourite Recipe</string>
    <string name="recipe_name_detail">-</string>
    <string name="tags_name_detail">Tags</string>
    <string name="countryFlagIconDescription">countryFlagIconDescription</string>
    <string name="country_name_detail">Country</string>
    <string name="clockIconDescription">clockIconDescription</string>
    <string name="time_name_detail">60\'</string>
    <string name="servingIconDescription">servingIconDescription</string>
    <string name="serving_num_name_detail">2</string>
    <string name="difIconDescription">difIconDescription</string>
    <string name="dif__name_detail">Difficulty</string>
    <string name="ingredients_name_detail">Ingredients</string>
    <string name="steps_name_detail">Steps</string>
    <string name="edit_recipe_name_detail">Edit Recipe</string>
    <string name="consume_recipe_warning_msg">Are you sure that you want to consume this recipe?</string>
    <string name="consume_recipe_yes_msg">Yes</string>
    <string name="recipe_consumed_msg">Recipe Consumed!</string>
    <string name="consume_recipe_no_msg">No</string>
    <string name="please_select_an_ingredient_msg">Please select an ingredient</string>
    <string name="please_enter_a_quantity_msg">Please enter a quantity</string>
    <string name="invalid_quantity_msg">Invalid quantity</string>
    <string name="step_num_text">01</string>
    <string name="step_desc_text">This is the description of the step.</string>
    <string name="enter_minutes_hint_text">Enter minutes</string>
    <string name="select_ingredient_text">Select Ingredient</string>
    <string name="quantity_text">Quantity</string>
    <string name="enter_step_description_hint">Enter step description</string>
    <string name="enter_quantity_hint">Enter quantity</string>
    <string name="recipe_saved_successfully_toast">Recipe saved successfully!</string>
    <string name="recipe_updated_successfully_toast">Recipe updated successfully!</string>
    <string name="time_btn_text">"Time: "</string>
    <string name="please_enter_the_step_description_toast">Please enter the step description</string>
    <string name="please_enter_the_time_in_minutes_toast">Please enter a valid time</string>
    <string name="country_name_text">Country Name</string>
    <string name="imgviewflag_description">imgViewFlag</string>
    <string name="ingredient_name_text">Ingredient</string>
    <string name="tag_name">Tag name</string>
    <string name="recipe_not_found_text">Recipe not found!</string>
    <string name="select_a_country_help_text">Select a country</string>
    <string name="unnamed_recipe_text">Unnamed Recipe</string>

    <string name="all_filter">All filters</string>
    <string name="favorites_only">Favorites</string>
    <string name="title_ai_recipe">AI Recipe</string>
    <string name="please_enter_a_recipe_name">Please enter a recipe name</string>
    <string name="please_enter_the_number_of_servings">Please enter the number of servings</string>
    <string name="please_select_difficulty">Please select difficulty</string>
    <string name="please_enter_the_preparation_time">Please enter the preparation time</string>
    <string name="please_add_at_least_one_ingredient">Please add at least one ingredient</string>
    <string name="please_add_at_least_one_step">Please add at least one step</string>
    <string name="consume_question_mark">Consume?</string>

    <string name="deleteBtnDescription">delete_recipe_btn_desc</string>
    <string name="delete_recipe_title">Delete Recipe</string>
    <string name="delete_recipe_message">Are you sure you want to delete this recipe?</string>
    <string name="recipe_deleted">Recipe deleted!</string>

    <string name="add">Add</string>
    <string name="new_list">New List</string>
    <string name="refill_ingredients">Refill Ingredients</string>
    <string name="ai_recipes">AI Recipes</string>
    <string name="decor">decor</string>
    <string name="narrator_btn">Narrator</string>
    <string name="lang_eng">English</string>
    <string name="lang_el">Ελληνικά</string>
    <string name="lang_ko">한국어</string>
    <string name="add_ingredient_desc">Add Ingredient</string>
    <string name="add_step_desc">Add Step</string>
    <string name="edit_mode_enabled">Edit Mode Enabled</string>
    <string name="edit_mode_disabled">Edit Mode Disabled</string>
    <string name="servings_description">Recipe Servings</string>
    <string name="use_my_ingredients">Use my Ingredients</string>

    <string name="new_list_dialog_title">New List?</string>
    <string name="new_list_dialog_message">Are you sure that you want create a new Shopping List? (All the items in your current Shopping List will be deleted!)</string>
    <string name="new_list_confirm">Yes</string>
    <string name="new_list_cancel">No</string>
    <string name="new_list_created_toast">New List created!</string>
    <string name="new_list_no_changes_toast">No changes made</string>

    <string name="refill_dialog_title">Refill Ingredients?</string>
    <string name="refill_dialog_message">Are you sure that you want to add all the checked items in your Ingredients?</string>
    <string name="refill_success_toast">Ingredients Refilled!</string>
    <string name="my_ai_recipes">My AI Recipes</string>
    <string name="view_ai_recipe">View AI Recipe</string>
    <string name="ingredient_info">Ingredient Info</string>
</resources>