<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_MyRecipes"
        android:icon="@drawable/ic_chef_hat"
        android:title="@string/shortened_title_my_recipes" />

    <item
        android:id="@+id/navigation_MyIngredients"
        android:icon="@drawable/ic_grocery"
        android:title="@string/shortened_title_my_ingredients" />
    <item
        android:id="@+id/navigation_AI"
        android:icon="@drawable/ic_wand_shine"
        android:title="@string/title_AI" />
    <item
        android:id="@+id/navigation_MyShoppingList"
        android:icon="@drawable/ic_checklist"
        android:title="@string/shortened_title_my_shopping_list" />
    <item
        android:id="@+id/navigation_Settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_Settings" />

</menu>