<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <!-- Recipe Image -->
        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_cookie"
            android:contentDescription="@string/recipe_image_desc"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <!-- Title and Characteristic -->
        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:scaleType="center"
            android:padding="2dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favorite_24px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/recipeImage"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/recipe_title_desc"
                android:text="@string/recipe_title_example"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/recipeCharacteristic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_text_example"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>