<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.Settings.SettingsFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/change_language"
        app:cornerRadius="4dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_theme"
        app:cornerRadius="4dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchNarrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/narrator_btn"
        android:checked="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        />

</LinearLayout>