<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <!-- Top curved background -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="410dp"
                    android:background="@drawable/ic_circle_curve_top" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageRecipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    app:shapeAppearanceOverlay="@style/CircularImage"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_view_recipe" />

                <ImageButton
                    android:id="@+id/btnChangeImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/img_picker_launcher_content_dec_add"
                    android:src="@drawable/photo_library_24px"
                    android:background="@drawable/ic_circle_btns"
                    app:tint="@color/vampireGray"
                    android:scaleType="centerInside" />

            </FrameLayout>

            <!-- Recipe Name Title -->

            <!-- Editable Recipe Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipe_name_hint"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Ingredients Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients_title_add"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linearLayoutIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp">


                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddIngredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/add_title_btn_add"
                        android:text="@string/add_title_btn_add"
                        app:cornerRadius="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Execution Steps Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/steps_title_add"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linearLayoutSteps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp">

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddStep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:text="@string/add_title_btn_add"
                        app:cornerRadius="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Tags Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tags_title_add"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewTags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Country and Time Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSelectCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country_title_add"
                    app:cornerRadius="4dp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnSelectTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_title_add"
                    app:cornerRadius="4dp" />
            </LinearLayout>


        <!-- Servings and Difficulty Buttons -->

            <!-- Meal Number (Servings) -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMealNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servings_title_hint_add"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Difficulty -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/difficulty_title_add"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



    </ScrollView>

    <!-- Confirm Button fixed at bottom -->
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm_title_add"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>